--- a/pages/styles.css
+++ b/pages/styles.css
@@ -680,6 +680,12 @@ body {
   }
 }
 
+body.profileScreen {
+  background: url(../images/abstract-background.jpg);
+  background-size: cover;
+  background-position: center;
+}
+
 main {
   display: flex;
   flex-direction: column;
@@ -697,6 +703,7 @@ section {
   flex-grow: 1;
   background-size: cover;
   background-position: center;
+  background-repeat: no-repeat;
 }
 
 .logo {
@@ -752,6 +759,46 @@ section:last-child .sectionContent {
 }
 .textContainer p {
   display: none;
+}
+
+.sectionProfile {
+  display: flex;
+  flex-direction: column;
+}
+
+.sectionProfile .dati {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 3rem;
+}
+.sectionProfile .dati .fullName {
+  font-family: "Helvetica Neue", sans-serif;
+  font-size: 3rem;
+  line-height: 1;
+  font-weight: bold;
+  background: linear-gradient(45deg, var(--red-a400), var(--blue-a400));
+  background-size: 100%;
+  -webkit-background-clip: text;
+          background-clip: text;
+  -webkit-text-fill-color: transparent;
+  margin-bottom: 2rem;
+}
+.sectionProfile .dati .email, .sectionProfile .dati .age {
+  font-size: 1.25rem;
+  color: black;
+  padding: 0.5rem 0;
+}
+.sectionProfile .dati .email span, .sectionProfile .dati .age span {
+  color: var(--blue-grey-500);
+}
+.sectionProfile .dati .email span {
+  display: flex;
+  flex-direction: column;
+  margin-top: 0.5rem;
+}
+
+.profileScreen .buttonPrimary {
+  margin-bottom: 6rem;
 }
 
 @media only screen and (min-width: 426px) {
